--- a/tansci-view/src/assets/css/common.less
+++ b/tansci-view/src/assets/css/common.less
@@ -1,5 +1,15 @@
-// 公共样式
+// 修改主题
+:root{
+    --el-color-primary: #2F9688 !important;
+}
+.el-tag--dark{
+    --el-tag-bg-color: #2F9688 !important;
+}
+.el-tag--plain{
+    --el-tag-text-color: #2F9688 !important;
+}
 
+// 公共样式
 /**
  * table组件样式
  */
